<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.auth.SignUpActivity">

    <TextView
        android:id="@+id/tvWelcome"
        style="@style/authHeadingTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20sdp"
        android:text="@string/_create_account"
        app:layout_constraintEnd_toStartOf="@+id/gl_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.7" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tfName"
        style="@style/inputLayoutStyle"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:hint="@string/_full_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gl_2"
        app:startIconDrawable="@drawable/user">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etName"
            style="@style/editTextStyle"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tfEmail"
        style="@style/inputLayoutStyle"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:hint="@string/_et_Email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tfName"
        app:startIconDrawable="@drawable/user">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            style="@style/editTextStyle"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tfPassword"
        style="@style/inputLayoutStyle"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:hint="@string/_password"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tfEmail"
        app:startIconDrawable="@drawable/lock">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            style="@style/editTextStyle"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tfConfirmPassword"
        style="@style/inputLayoutStyle"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:hint="@string/_confirmpassword"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tfPassword"
        app:startIconDrawable="@drawable/lock">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etConfiremPassword"
            style="@style/editTextStyle"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCreateAccount"
        style="@style/btnSubmit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:text="@string/_create_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gl_3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />

    <TextView
        android:id="@+id/tvOrWith"
        style="@style/editTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_or_countine_with"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gl_4" />

    <View
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:background="@drawable/other_account_bg"
        app:layout_constraintBottom_toBottomOf="@id/btnFaceBook"
        app:layout_constraintEnd_toEndOf="@id/btnFaceBook"
        app:layout_constraintStart_toStartOf="@id/btnFaceBook"
        app:layout_constraintTop_toTopOf="@id/btnFaceBook" />

    <View
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:background="@drawable/other_account_bg"
        app:layout_constraintBottom_toBottomOf="@id/btnApply"
        app:layout_constraintEnd_toEndOf="@id/btnApply"
        app:layout_constraintStart_toStartOf="@id/btnApply"
        app:layout_constraintTop_toTopOf="@id/btnApply" />

    <View
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:background="@drawable/other_account_bg"
        app:layout_constraintBottom_toBottomOf="@id/btnGoogle"
        app:layout_constraintEnd_toEndOf="@id/btnGoogle"
        app:layout_constraintStart_toStartOf="@id/btnGoogle"
        app:layout_constraintTop_toTopOf="@id/btnGoogle" />

    <ImageView
        android:id="@+id/btnApply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:importantForAccessibility="no"
        android:src="@drawable/apple_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvOrWith" />

    <ImageView
        android:id="@+id/btnFaceBook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_35sdp"
        android:importantForAccessibility="no"
        android:src="@drawable/facebook"
        app:layout_constraintBottom_toBottomOf="@+id/btnApply"
        app:layout_constraintStart_toEndOf="@+id/btnApply"
        app:layout_constraintTop_toTopOf="@+id/btnApply" />

    <ImageView
        android:id="@+id/btnGoogle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_35sdp"
        android:importantForAccessibility="no"
        android:src="@drawable/google"
        app:layout_constraintBottom_toBottomOf="@+id/btnApply"
        app:layout_constraintEnd_toStartOf="@+id/btnApply"
        app:layout_constraintTop_toTopOf="@+id/btnApply" />

    <TextView
        android:id="@+id/tvCreateAcc"
        style="@style/createAccText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:text="@string/_i_already_have_account"
        app:layout_constraintEnd_toStartOf="@+id/btnLogin"
        app:layout_constraintStart_toStartOf="@+id/btnApply"
        app:layout_constraintTop_toBottomOf="@+id/btnApply" />

    <TextView
        android:id="@+id/btnLogin"
        style="@style/registrationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_5sdp"
        android:text="@string/_login"
        app:layout_constraintBottom_toBottomOf="@+id/tvCreateAcc"
        app:layout_constraintEnd_toEndOf="@+id/btnApply"
        app:layout_constraintStart_toEndOf="@+id/tvCreateAcc"
        app:layout_constraintTop_toTopOf="@+id/tvCreateAcc" />
</androidx.constraintlayout.widget.ConstraintLayout>