<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"

    android:fillViewport="true"
    tools:context=".ui.homepage.home.HomePageFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"

        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"

            android:layout_marginTop="@dimen/_10sdp"
            android:backgroundTint="@color/white"
            app:cardCornerRadius="@dimen/_5sdp"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/_5sdp"
                android:paddingVertical="@dimen/_8sdp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/search_1"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|top"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/_search_any_product"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/_12sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/mic"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/tvAllFeatured"
            style="@style/onBordingTopText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/_all_featured"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardSearch" />


        <TextView
            android:id="@+id/tvFilter"
            style="@style/featuresTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10sdp"
            android:drawablePadding="@dimen/_3sdp"
            android:padding="@dimen/_5sdp"
            android:text="@string/_filter"
            app:drawableEndCompat="@drawable/filtter"
            app:layout_constraintBottom_toBottomOf="@+id/tvAllFeatured"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvAllFeatured" />

        <TextView
            android:id="@+id/tvSort"
            style="@style/featuresTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10sdp"
            android:drawablePadding="@dimen/_3sdp"
            android:padding="@dimen/_5sdp"
            android:text="@string/_sort"
            app:drawableEndCompat="@drawable/sort"
            app:layout_constraintBottom_toBottomOf="@+id/tvAllFeatured"
            app:layout_constraintEnd_toStartOf="@+id/tvFilter"
            app:layout_constraintTop_toTopOf="@+id/tvAllFeatured" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCatefory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvAllFeatured"
            tools:listitem="@layout/category_item" />

        <ImageView
            android:id="@+id/imgOffers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:src="@drawable/offersbg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rvCatefory" />

        <TextView
            android:id="@+id/tvPrecent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:fontFamily="@font/montserrat_bold"
            android:text="50-40% OFF"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/imgOffers"
            app:layout_constraintTop_toTopOf="@+id/imgOffers" />

        <TextView
            android:id="@+id/tvNowInProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:text="Now in (product)"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintStart_toStartOf="@id/tvPrecent"
            app:layout_constraintTop_toBottomOf="@+id/tvPrecent" />

        <TextView
            style="@style/viewAllText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20sdp"
            android:padding="@dimen/_8sdp"
            android:text="Shop Now"
            app:layout_constraintBottom_toBottomOf="@id/imgOffers"
            app:layout_constraintStart_toStartOf="@+id/tvPrecent" />


        <androidx.cardview.widget.CardView
            android:id="@+id/cardDealOftheDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@color/light_blue"
            app:cardCornerRadius="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@+id/imgOffers">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/light_blue"
                android:paddingHorizontal="@dimen/_3sdp"
                android:paddingVertical="@dimen/_10sdp">

                <TextView
                    android:id="@+id/tvDealDay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_2sdp"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/_deal_of_the_day"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14sdp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvClockTimer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:drawableStart="@drawable/clock"
                    android:drawablePadding="@dimen/_2sdp"
                    android:text="22h 55m 20s remaining"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/tvDealDay"
                    app:layout_constraintStart_toStartOf="@+id/tvDealDay"
                    app:layout_constraintTop_toBottomOf="@id/tvDealDay" />

                <TextView
                    android:id="@+id/btnViewAllDealDay"
                    style="@style/viewAllText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:text="@string/_view_all"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvDealOfTheDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@+id/cardDealOftheDay"
            tools:listitem="@layout/product_item" />

        <ImageView
            android:id="@+id/imgSpecialOffer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:src="@drawable/special_offer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rvDealOfTheDay" />

        <TextView
            android:id="@+id/tvSpecialOffers"
            style="@style/tvSpecial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_special_offers"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgSpecialOffer"
            app:layout_constraintTop_toTopOf="@+id/imgSpecialOffer" />

        <TextView
            android:id="@+id/tvSubSpecial"
            style="@style/featuresTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/_we_make_sure"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tvSpecialOffers"
            app:layout_constraintTop_toBottomOf="@+id/tvSpecialOffers" />


        <androidx.cardview.widget.CardView
            android:id="@+id/cardTrendingProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:background="@color/light_pink"
            app:cardCornerRadius="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@+id/imgSpecialOffer">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/light_pink"
                android:paddingHorizontal="@dimen/_3sdp"
                android:paddingVertical="@dimen/_10sdp">

                <TextView
                    android:id="@+id/tvTrendProduct"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_2sdp"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/_trending_product"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14sdp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvlastDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:drawableStart="@drawable/clock"
                    android:drawablePadding="@dimen/_2sdp"
                    android:text="22h 55m 20s remaining"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/tvTrendProduct"
                    app:layout_constraintStart_toStartOf="@+id/tvTrendProduct"
                    app:layout_constraintTop_toBottomOf="@id/tvTrendProduct" />

                <TextView
                    android:id="@+id/btnViewAllTrendProduct"
                    style="@style/viewAllText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:text="@string/_view_all"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvTrendingProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@+id/cardTrendingProduct"
            tools:listitem="@layout/product_item" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:background="@color/white"
            app:cardCornerRadius="@dimen/_5sdp"
            app:layout_constraintTop_toBottomOf="@+id/rvTrendingProduct">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white">

                <ImageView
                    android:id="@+id/imgNewArrivals"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:src="@drawable/new_arrival"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/tvNewArrivals"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/_new_arrivals"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_18sdp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imgNewArrivals" />

                <TextView
                    android:id="@+id/tvSubNewArrivals"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/_summer_25_collection"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp"
                    app:layout_constraintStart_toStartOf="@+id/tvNewArrivals"
                    app:layout_constraintTop_toBottomOf="@+id/tvNewArrivals" />


                <TextView
                    android:id="@+id/btnNewArrivals"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_submit_bg"
                    android:drawablePadding="@dimen/_4sdp"
                    android:fontFamily="@font/montserrat_semibold"
                    android:gravity="center"
                    android:padding="@dimen/_6sdp"
                    android:text="@string/_view_all"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp"
                    app:drawableEndCompat="@drawable/arrow_right"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imgNewArrivals" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>